# ligath

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_bootstrap.txt
apt/: __main__.py  bootstrap.sh  requirements_bootstrap.txt
apt/apt/: __main__.py
backend/: README.md  env.sh  go.mod  go.sum  main.go  model.go  storage.go  storage_bolt.go  storage_bolt_util.go  storage_mock.go  storage_test.go
collect_apt/: bootstrap.sh  pyproject.toml
frontend/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.ts  model.ts  router.ts  store.ts
frontend/src/components/: MyButton.vue  NavBar.vue
frontend/src/views/: Home.vue  Licenses.vue  Package.vue
