[tool.poetry]
name = "collect_apt"
version = "0.1.0"
description = ""
authors = ["GROOVE X Development Team"]

[tool.poetry.dependencies]
python = "^3.7"
python-debian = "^0.1.34"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = { version = "*", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
